# wg-be-assessment

./: .env  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  logger.conf  pyproject.toml
exercises/: exercise_1_1.py  exercise_1_2.py
tests/: conftest.py
tests/actions/: test_GetHealthIndex.py  test_Insertvalue.py  test_ReadZipcodesFile.py
tests/fixtures/: app.py
tests/integration/: test_app.py
wg_be_exam/: app.py  config.py
wg_be_exam/actions/: getHealthIndex.py  getHealthIndexes.py  insertValue.py  readCsv.py  readZipcodesFile.py
wg_be_exam/db/: alembic.ini  db.py  seeders.py
wg_be_exam/db/migrations/: env.py
wg_be_exam/db/migrations/versions/: 06511b064f85_create_zipcodes_table.py
wg_be_exam/models/: base.py
wg_be_exam/routes/: __init__.py
wg_be_exam/routes/index/: models.py  router.py
wg_be_exam/routes/zipcode/: models.py  router.py
